# snakeGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  snakeGL
include/: Color.hpp  Program.hpp  Shader.hpp  Window.hpp
include/glad/: glad.h
src/: CMakeLists.txt  Program.cpp  Shader.cpp  Window.cpp  fragmentShader.glsl  glad.c  main.cpp  main.glsl  vertexShader.glsl
