CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(snakeGL
        VERSION 0.0.0.1
        DESCRIPTION "A simple, classic game developed to better my knowledge of C/C++ and the OpenGL API."
        LANGUAGES   "CXX" "C")

SET(INCL_DIR ${PROJECT_BINARY_DIR}/include)
SET(LIB_DIR ${PROJECT_BINARY_DIR}/lib)

FIND_PACKAGE(glfw3 REQUIRED)

INCLUDE_DIRECTORIES(${INCL_DIR})

FILE(GLOB SOURCES "src/*.cpp" "src/*.c")

ADD_EXECUTABLE(snakeGL ${SOURCES})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

TARGET_LINK_LIBRARIES(snakeGL PRIVATE glfw)